Fixed overflow on pages

--- a/java-web-app/src/main/webapp/styles/general.css
+++ b/java-web-app/src/main/webapp/styles/general.css
@@ -43,7 +43,6 @@ a {
   display: flex;
   align-items: center;
   cursor: pointer;
-  padding-right: 8vw;
 }
 
 .login-access p {
